2004-02-29  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/lowlevellock.S
	(__lll_mutex_lock_wait): Optimize a bit more.  Just one copy of
	the atomic instruction needed.
	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.S
	(__lll_mutex_lock_wait): Likewise.

2004-02-28  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-cond14 and tst-cond15.
	* tst-cond14.c: New file.
	* tst-cond15.c: New file.

2004-02-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/createthread.c (create_thread): Remove use of
	CLONE_STOPPED.  We cannot use SIGCONT which means CLONE_STOPPED
	needs to be implemented differently to be useful.

2004-02-26  Ulrich Drepper  <drepper@redhat.com>

	* pthread_attr_setschedparam.c: Don't test priority against limits
	here.  Set ATTR_FLAG_SCHED_SET flag.
	* pthread_attr_setschedpolicy.c: Set ATTR_FLAG_POLICY_SET flag.
	* pthread_create.c (__pthread_create_2_1): Copy scheduling attributes
	from parent thread to child.  If attribute is used and scheduling
	parameters are not inherited, copy parameters from attribute or
	compute them.  Check priority value.
	* pthread_getschedparam.c: If the parameters aren't known yet get
	them from the kernel.
	* pthread_setschedparam.c: Set ATTR_FLAG_SCHED_SET and
	ATTR_FLAG_POLICY_SET flag for thread.
	* sysdeps/unix/sysv/linux/internaltypes.h: Define ATTR_FLAG_SCHED_SET
	and ATTR_FLAG_POLICY_SET.

	* sysdeps/pthread/createthread.c: Use tgkill if possible.

	* pthread_attr_getstackaddr.c (__pthread_attr_getstackaddr): Don't
	fail if stack address hasn't been set.  Just return 0.

2004-02-25  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests-nolibpthread): Add tst-unload.  Don't link with
	libpthread for the files in this list.
	(CFLAGS-tst-unload): Removed.
	* tst-unload.c (do_test): Don't use complete path for
	LIBPHREAD_SO.

	* Makefile: Define sonames for tst-tls5mod, tst-_res1mod1, and
	tst-_res1mod2.

2004-02-22  Ulrich Drepper  <drepper@redhat.com>
