@@ -190,16 +190,14 @@ __pthread_cond_timedwait:
 	movl	wakeup_seq+4(%ebx), %edx
 
 	cmpl	16(%esp), %edx
-	ja	7f
-	jb	15f
+	jne	7f
 	cmpl	12(%esp), %edi
-	jbe	15f
+	je	15f
 
 7:	cmpl	%ecx, %edx
-	ja	9f
-	jb	15f
+	jne	9f
 	cmp	%eax, %edi
-	ja	9f
+	jne	9f
 
 15:	cmpl	$-ETIMEDOUT, %esi
 	jne	8b
